# AgentGaurd

./: .env.example  .gitignore  README.md  agent_client.py  alembic.ini  database.py  gmail_service.py  main.py  package-lock.json  package.json  requirements.txt  setup_demo.py
alembic/: env.py
alembic/versions/: 20260429_0001_initial_schema.py  20260429_0002_gmail_connectors.py  20260429_0003_approval_editing_logs.py  20260429_0004_advanced_policy_engine.py  20260429_0005_tools_workspace_unique.py  20260429_0006_alerts_config.py
app/: globals.css  layout.js  page.js
app/action-policies/: page.js
app/action-secret-policies/: page.js
app/actions/: page.js
app/agents/: page.js
app/alerts/: page.js
app/approvals/: page.js
app/components/: AppHeader.js  StatusBadge.js
app/connector-success/: page.js
app/connectors/: page.js
app/demo/: page.js
app/lib/: api.js
app/logs/: page.js
app/policies/: page.js
app/secrets/: page.js
app/simulator/: page.js
app/test-agent/: page.js
app/tools/: page.js
app_backend/: main.py
app_backend/core/: config.py  database.py  security.py
app_backend/models/: models.py
app_backend/routers/: agents.py  (+16 more)
docs/: QA_CHECKLIST.md
sdk/python/: README.md  pyproject.toml
sdk/python/agentguard/: __init__.py  client.py
sdk/python/examples/: create_gmail_draft.py  smoke_test.py
tests/: conftest.py  test_actions.py  test_agents.py  test_alerts.py  test_api_proxy.py  test_approvals.py  test_mcp.py  test_policies.py  test_scoped_secret_policies.py  test_secrets.py  test_simulator.py  test_workspace_isolation.py
(+46 files in other folders)
